better handling of links with targets (hashes)

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 - column span support
 - add form elements support
 - add font tag support
+- add comments in tests
+- rename the root_url param to url
