Add text:outline-level attributes to headings for validation

--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@
 - add font tag support
 - check if we need to update manifest.xml when adding pictures
 - add tags to remove content from the template
+- make a sample script in PHP
