Add download link

--- a/README
+++ b/README
@@ -3,6 +3,7 @@ XHTML to ODT XML transformation
 
 These stylesheets convert namespaced XHTML to [ODT][].
 
+You can [download them][download] directly from the development branch using Gitorious.
 
 The HTML must be well-formed and valid, so I recommand running it through [Tidy][] before sending it to the stylesheets.
 
@@ -13,6 +14,7 @@ This is based on the work on [docbook2odt][], by Roman Fordinal. Many thanks to 
 [ODT]: http://en.wikipedia.org/wiki/OpenDocument
 [Tidy]: http://tidy.sourceforge.net/
 [docbook2odt]: http://open.comsultia.com/docbook2odf/
+[download]: http://gitorious.org/xhtml2odt/xhtml2odt/archive-tarball/master
 
 
 Caveats
