--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,6 +1,17 @@
 Changes in XHTML2ODT
 ====================
 
+Version 1.3
+-----------
+
+* Improve <dl> and <span> tags conversion
+* Improve image handling
+* Add RPM and Debian package metadata
+* Better XML escaping in the PHP script
+* Add support for Elyxer
+* Other various improvements and bug fixes
+
+
 Version 1.2
 -----------
 
