--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xhtml2odt (1.3-1) unstable; urgency=low
+
+  * Version 1.3
+
+ -- Aurélien Bompard <aurelien@bompard.org>  Thu, 14 Jul 2011 19:07:42 +0200
+
 xhtml2odt (1.2-1) unstable; urgency=low
 
   * Initial release
